--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,61 +1,55 @@
-<section>
-    <div class="container products-container">
-        <div class="">
-            <h4 class="products-naturalness">100% natural</h4>
-            <h3 class="products-headings">products</h3>
-            <ul class="products-list">
-                <li class="products-item">
-                    <!-- <img class="products-test" src="./images/products/mobile/mobile_product1_1x.png" alt="Продукция"> -->
-                    <h4 class="product-name">ice cream</h4>
-                    <div class="products-decoration">
-                        <span></span><span></span><span></span>
-                    </div>
-                    <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut
-                        labore et.
-                        dolore magna
-                        aliqua facilisis.</p>
-                    <a class="product-link" href="#">
-                        <svg class="products-button">
-                            <use href="./images/icons/arrow-right.svg#image0"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="products-item">
-                    <!-- <img class="products-test" src="./images/products/mobile/mobile_product1_1x.png" alt="Продукция"> -->
-                    <h4 class="product-name">ice cream</h4>
-                    <div class="products-decoration">
-                        <span></span><span></span><span></span>
-                    </div>
-                    <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut
-                        labore et.
-                        dolore magna
-                        aliqua facilisis.</p>
-                    <a class="product-link" href="#">
-                        <svg class="products-button">
-                            <use href="./images/icons/arrow-right.svg#image0"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="products-item">
-                    <!-- <img class="products-test" src="./images/products/mobile/mobile_product1_1x.png" alt="Продукция"> -->
-                    <h4 class="product-name">ice cream</h4>
-                    <div class="products-decoration">
-                        <span></span><span></span><span></span>
-                    </div>
-                    <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut
-                        labore et.
-                        dolore magna
-                        aliqua facilisis.</p>
-                    <a class="product-link" href="#">
-                        <svg class="products-button">
-                            <use href="./images/icons/arrow-right.svg#image0"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
+<section class="products-section">
+    <div class="container">
+        <h2 class="products-headings"><span class="products-naturalness">100% natural</span> products</h2>
+        <ul class="products-list">
+            <li class="products-item">
+                <h3 class="product-name-dessert">ice cream</h3>
+                <div class="products-decoration">
+                    <span></span><span></span><span></span>
+                </div>
+                <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut
+                    labore et.
+                    dolore magna
+                    aliqua facilisis.</p>
+                <a class="product-link" href="#">
+                    <svg class="products-button">
+                        <use href="./images/icons/arrow-right.svg#image0"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="products-item">
+                <h3 class="product-name-dessert">ice cream</h3>
+                <div class="products-decoration">
+                    <span></span><span></span><span></span>
+                </div>
+                <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut
+                    labore et.
+                    dolore magna
+                    aliqua facilisis.</p>
+                <a class="product-link" href="#">
+                    <svg class="products-button">
+                        <use href="./images/icons/arrow-right.svg#image0"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="products-item">
+                <h3 class="product-name-dessert">ice cream</h3>
+                <div class="products-decoration">
+                    <span></span><span></span><span></span>
+                </div>
+                <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut
+                    labore et.
+                    dolore magna
+                    aliqua facilisis.</p>
+                <a class="product-link" href="#">
+                    <svg class="products-button">
+                        <use href="./images/icons/arrow-right.svg#image0"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
     </div>
 </section>
