--- a/src/sass/layouts/_section-products.scss
+++ b/src/sass/layouts/_section-products.scss
@@ -1,12 +1,24 @@
-.products-container {
+.products-section {
     padding-top: 121px;
     padding-bottom: 98px;
 
-    @include from (desktop) {
-        width: 1091px;
+    @include from(tablet) {
+        padding-top: 122px;
+        padding-bottom: 112px;
     }
-}
+    @include from (desktop) {
+        padding-top: 127px;
+        padding-bottom: 119px;
+    }
+    .container{
+        @include from (desktop) {
+             padding-right: 114px;
+            padding-left: 114px;
+        }
+     }
+}   
 .products-naturalness {
+    margin-bottom: 15px;
     font-family: Titan One;
     color: $secondary-color;
     font-weight: normal;
@@ -25,6 +37,7 @@
     }
 }
 .products-headings {
+        display: grid;
     margin-bottom: 145px;
     font-family: Titan One;
     color: $accent-color;
@@ -38,13 +51,12 @@
      @include from(tablet) {
         font-size: 48px;
         line-height: 55px;
-        margin-bottom: 150px;
+        margin-bottom: 0px;
      }
      @include from(desktop) {
          font-size: 58px;
         line-height: 66px;
         letter-spacing: 0.06em;
-        margin-bottom: 260px;
 
      }
 }
@@ -53,7 +65,6 @@
         display: flex;
         flex-wrap: wrap;
         margin-left: -20px;
-        margin-top: -130px;
 }
 @include from(desktop) {
 margin-left: -30px;
@@ -85,8 +96,8 @@ margin-left: -30px;
         margin: auto;
         top: -50%;
         transform: translate(0px, 56%);
-        height: 250px;
-        width: 250px;
+        height: 249px;
+        width: 252px;
         display: block;
     }
     &:nth-child(1)::before {
@@ -123,14 +134,17 @@ margin-left: -30px;
         }
         }
         @include from(tablet) {
+            margin-top: 150px;
             flex-basis: calc(100% / 3 - 20px);
             margin-left: 20px;
+            padding-top: 152px;
+            padding-bottom: 41px;
             padding-left: 11px;
             padding-right: 11px;
 
         &::before {
             top: -50%;
-            transform: translate(0px, 62%);
+            transform: translate(0px, 60%);
             width: 220px;
             height: 226px;
             }
@@ -169,13 +183,14 @@ margin-left: -30px;
         }
         }
         @include from(desktop) {
+            margin-top: 260px;
             flex-basis: calc(100% / 3 - 30px);
             margin-left: 30px;
-            padding: 164px 42px 50px;
+            padding: 163px 44px 50px;
     &::before {
             top: -50%;
             transform: translate(0px, 15%);
-            width: 337px;
+            width: 335px;
             height: 335px;
             }
     &:nth-child(1)::before {
@@ -213,14 +228,13 @@ margin-left: -30px;
         }
         }
 }
-.product-name {
+.product-name-dessert {
     margin-bottom: 30px;
     font-family: Titan One;
     color: $white-color;
     font-weight: normal;
     font-size: 20px;
     line-height: 23px;
-    /* identical to box height */
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
@@ -228,23 +242,28 @@ margin-left: -30px;
     @include from(desktop) {
     font-size: 30px;
     line-height: 34px;
+    margin-bottom: 32px;
     }
 }
 .products-decoration {
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
+
         span{
         display: block;
         width: 6px;
         height: 6px;
         border-radius: 50%;
         background-color: $white-color;
-        margin-bottom: 30px;
 
         &:not(:first-child){
         margin-left: 4px;
         }
     }
+     @include from(desktop) {
+            margin-bottom: 32px;
+        }
 }
 .product-description {
     margin-bottom: 30px;
@@ -254,11 +273,13 @@ margin-left: -30px;
     /* or 21px */
     text-align: center;
     @include from(tablet) {
+        margin-bottom: 40px;
         line-height: 176%;
         height: 124px;
         overflow: hidden;
     }
     @include from(desktop) {
+        margin-bottom: 62px;
         font-size: 16px;
         height: 106px;
         margin-bottom: 62px;    
