Add decor icon for button

--- a/src/sass/made/_made.scss
+++ b/src/sass/made/_made.scss
@@ -36,6 +36,11 @@
     background-color: getColor('textLight');
   }
 
+  .decor-icon {
+    display: inline-flex;
+    margin-left: 10px;
+}
+
   .made-content {
     position: relative;
     display: block;
