--- a/src/partials/recipe.html
+++ b/src/partials/recipe.html
@@ -1,35 +1,41 @@
 <section class="recipe">
   <div class="container">
-        <p class="recipe_under-h">tradition and love</p>
-        <h2 class="recipe_title" id="recipe">how it’s made?</h2>
+    <p class="recipe_under-h">tradition and love</p>
+    <h2 class="recipe_title" id="recipe">how it’s made?</h2>
     <div class="recipe_card">
-       <picture>
-        <sourse
-        srcset="./images/bitmap/how-its-made/cow-milk/mob@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/mob@2x.png 2x"
-        media="(min-width:320px)">
+      <picture>
         <source
-        srcset="./images/bitmap/how-its-made/cow-milk/tab@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/tab@2x.png 2x"
-        media="(min-width:740px)">
+          srcset="./images/bitmap/how-its-made/cow-milk/mob@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/mob@2x.png 2x"
+          media="(max-width:739px)">
+
         <source
-        srcset="./images/bitmap/how-its-made/cow-milk/desk@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/desk@2x.png 2x"
-         media="(min-width:1280px)">
+          srcset="./images/bitmap/how-its-made/cow-milk/tab@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/tab@2x.png 2x"
+          media="(min-width:740px) and (max-width:1279px)">
+
+        <source
+          srcset="./images/bitmap/how-its-made/cow-milk/desk@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/desk@2x.png 2x"
+          media="(min-width:1280px)">
+
         <img class="recipe_cow" src="./images/bitmap/how-its-made/cow-milk/mob@1x.png" alt="cow">
       </picture>
 
       <div class="recipe_all-text">
-            <p class="recipe_bold-text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros.
-            Maecenas eleifend erat at justo fringilla.</p>
-            <p class="recipe_text">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat.
-            Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-            <br>
-            <br>
-            Aliquam erat volutpat. Aenean accumsan.</p>
-            <a href="#" class="link recipe-button">
-              <div class="recipe_button-all">
-                <p class="recipe_button-text">Read more</p>
-                <span class="recipe_arrow">></span>
-                     </div>
-            </a>
-      </div>        
-    </div>  
-    </section>
+        <p class="recipe_bold-text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
+          faucibus lorem eget, egestas eros.
+          Maecenas eleifend erat at justo fringilla.</p>
+        <p class="recipe_text">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus
+          orci in imperdiet placerat.
+          Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+          <br>
+          <br>
+          Aliquam erat volutpat. Aenean accumsan.
+        </p>
+        <a href="#" class="link recipe-button">
+          <div class="recipe_button-all">
+            <p class="recipe_button-text">Read more</p>
+            <span class="recipe_arrow">></span>
+          </div>
+        </a>
+      </div>
+    </div>
+</section>
