--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,7 @@
 <section class="hero">
   <div class="container hero-container">
     <div class="hero-title-container">
-      <h1 class="hero-title-text">
+      <h1 class="hero-title-text animate__animated animate__zoomIn">
         ice cream
         made with
         <span>passion</span>
