--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -38,7 +38,7 @@
         margin-left: auto;
         margin-right: auto;
         background-color: #FAFAFA;
-        background-image: url(../../images/testimonuals/lapki.svg);
+        background-image: url(../images/icons/quotes.svg);
         background-repeat: no-repeat;
         background-position: 61px 28px;
        
