перевел модалку на инглиш

--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -7,10 +7,12 @@
     </button>
 
     <div class="modal-form">
-      <h2 class="modal-form-title">Оставьте свои данные, мы вам перезвоним</h2>
+      <h2 class="modal-form-title">
+        Leave your details, we will call you back
+      </h2>
       <form class="form">
         <label class="form-label">
-          Имя
+          Name
           <input class="form-input" type="text" name="name" pattern="" />
           <svg class="form-input-svg">
             <use href="./images/svg/sprite.svg#icon-person"></use>
@@ -18,7 +20,7 @@
         </label>
 
         <label class="form-label">
-          Телефон
+          Telephone
           <input class="form-input" type="tel" name="telephone" />
           <svg class="form-input-svg">
             <use href="./images/svg/sprite.svg#icon-phone"></use>
@@ -26,7 +28,7 @@
         </label>
 
         <label class="form-label">
-          Почта
+          Mail
           <input class="form-input" type="email" name="email" />
           <svg class="form-input-svg">
             <use href="./images/svg/sprite.svg#icon-email"></use>
@@ -34,22 +36,22 @@
         </label>
 
         <label class="text-area-label">
-          Комментарий
+          Comment
           <textarea
             class="text-area"
             name="comment"
-            placeholder="Введите текст"
+            placeholder="Type text"
           ></textarea>
         </label>
 
         <label class="modal-checkbox">
           <input class="checkbox" type="checkbox" name="checkbox" />
           <span class="checkbox-icon"></span>
-          Соглашаюсь с рассылкой и принимаю &nbsp;
-          <a class="modal-checkbox-link" href="#">Условия договора</a>
+          I agree to the newsletter and accept the &nbsp;
+          <a class="modal-checkbox-link" href="#">Terms and Conditions</a>
         </label>
 
-        <button type="submit" class="modal-send-button">Отправить</button>
+        <button type="submit" class="modal-send-button">Send</button>
       </form>
     </div>
   </div>
