--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <section class="footer">
-    <div class="footer__container">
+    <div class="footer__container container">
         <div class="footer__combine-header-contact">
             <div class="footer__combine-title">
                 <h2 class="footer__header-home-made">homemade ice cream made</h2>
