--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,4 +1,6 @@
 .container {
+  margin-left: auto;
+  margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
   @media screen and (min-width: 320px) {
