--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,7 +22,7 @@
       <div class="header-menu" data-menu>
         <button class="btn-header btn">
           Buy now
-          <svg class="arrow-svg" aria-label="Переход на мгновенную покупку">
+          <svg data-modal-open  class="arrow-svg" aria-label="Переход на мгновенную покупку">
             <use href="../src/images/icons/sprite.svg#tip"></use>
           </svg>
         </button>
