добавил стили на все девайсы

--- a/src/sass/_how-its-made.scss
+++ b/src/sass/_how-its-made.scss
@@ -3,12 +3,23 @@
   padding-top: 125px;
   padding-bottom: 100px;
 
+  @media screen and(max-width:767px) {
+    background-image: url('/images/mobile/how-its-made-milk.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+
   @media screen and(min-width:768px) {
     padding-top: 130px;
     padding-bottom: 140px;
   }
 
   @media screen and(min-width:1200px) {
+    background-image: url('/images/mobile/how-its-made-milk.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     padding-top: 125px;
   }
 }
@@ -27,6 +38,10 @@
   @media screen and(min-width:768px) {
     font-size: 26px;
   }
+
+  @media screen and(min-width:1200px) {
+    font-size: 30px;
+  }
 }
 
 .him-subtitle {
@@ -43,6 +58,13 @@
 
   @media screen and(min-width:768px) {
     font-size: 48px;
+    margin-bottom: 50px;
+    padding-right: 0;
+  }
+
+  @media screen and(min-width:1200px) {
+    font-size: 58px;
+    padding-right: 0;
   }
 }
 
@@ -56,12 +78,15 @@
   padding-left: 15px;
   padding-right: 15px;
   margin-bottom: 45px;
+
+  @media screen and(min-width:768px) {
+    width: calc((100% - 20px) / 2);
+  }
 }
 
 .him-text {
   margin-bottom: 45px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 5px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -72,13 +97,19 @@
 
   @media screen and(min-width:768px) {
     font-size: 14px;
+    padding-right: 0;
+    padding-left: 0;
+    margin-top: 50px;
+  }
+
+  @media screen and(min-width:1200px) {
+    font-size: 16px;
   }
 }
 
 .him-subtext {
   margin-bottom: 18px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 5px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -88,13 +119,8 @@
 
   @media screen and(min-width:768px) {
     font-size: 14px;
-  }
-}
-
-.bg {
-  @media screen and(max-width:767px) {
-    background-image: url('/images/mobile/how-its-made-milk.png');
-    background-repeat: no-repeat;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
 
@@ -110,9 +136,15 @@
   align-items: center;
   text-align: center;
   color: #d41443;
+  border: none;
 
   background: $main-color;
   border-radius: 22px;
+
+  @media screen and(min-width:768px) {
+    margin-top: 60px;
+    margin-left: 0;
+  }
 }
 
 .btn-him:hover {
@@ -123,6 +155,12 @@
 .btn-arrow {
   margin-left: 14px;
 }
+.him-list {
+  @media screen and(min-width:768px) {
+    display: flex;
+  }
+}
+
 .him-list-item {
   margin-top: 40px;
   margin-left: 20px;
@@ -160,6 +198,14 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $accent-color;
+
+  @media screen and(min-width:768px) {
+    font-size: 48px;
+  }
+
+  @media screen and(min-width:1200px) {
+    font-size: 58px;
+  }
 }
 
 .him-item-text {
@@ -169,4 +215,14 @@
   font-size: 12px;
   line-height: 1.66;
   color: #000000;
+
+  @media screen and(min-width:768px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+
+  @media screen and(min-width:1200px) {
+    font-size: 16px;
+    line-height: 1.66;
+  }
 }
