--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,7 +14,7 @@
     min-width: 320px;
   }
 
-  @media screen and (min-width: 409px) and (max-width: 768px) {
+  @media screen and (min-width: 409px) and (max-width: 767px) {
     width: 408px;
   }
 
@@ -38,11 +38,6 @@
   height: 502px;
   overflow-x: hidden;
 
-  @media screen and (min-width: 1280px) {
-    padding-right: 46px;
-    padding-left: 46px;
-  }
-
   @media screen and (min-width: 768px) {
     height: 400px;
     overflow-x: unset;
@@ -53,6 +48,8 @@
     height: 665px;
     overflow-x: unset;
     padding-top: 38px;
+    padding-right: 46px;
+    padding-left: 46px;
   }
 }
 
@@ -98,15 +95,13 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
-    padding: 0;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: 12px 0px;
     display: block;
     width: 210px;
 
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.3125;
+    line-height: 1.31;
 
     color: $button-bg-2;
     background-color: $button-bg-1;
@@ -131,7 +126,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // margin-left: -46px;
 
   @media screen and (min-width: 1280px) {
     margin-left: -46px;
@@ -315,7 +309,7 @@
 
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.3125;
+  line-height: 1.31;
   color: $accent-color;
   background-color: $third-text-color;
   border: 0;
