--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,56 @@
 <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-        <button class="btn_close" data-modal-close>X</button>
-        <p class="message">This is modal window</p>
+    <div class=" modal ">
+        <div class="modal-icon">
+            <button data-modal-close class="button btn-close">
+                <svg class="icon-exit" width="11" height="11">
+                    <!-- <use href='/images/icons/symbolall.svg#icon-close'></use> -->
+
+                </svg>
+            </button>
+        </div>
+
+        <div class="form">
+            <h3 class="title form-title">ОСТАВЬТЕ ЗАЯВКУ<br>и мы свяжемся с вами в ближайшее время</h3>
+
+            <form>
+                <div class="form-field">
+                    <label class="form-label" for="name"></label>
+                    <input type="text" class=" form-input form-no" name="user-name" id="name" placeholder="Имя" />
+                    <svg class="form-icon" width="18" height="18">
+                        <!-- <use href='/images/icons/symbolall.svg#icon-person'></use> -->
+
+                    </svg>
+                </div>
+                <div class="form-field">
+                    <label class=" form-label " for="tel"></label>
+                    <input type="tel" class=" form-input form-no" name="tel" id="tel" placeholder="Телефон"
+                        autocomplete="off" />
+                    <svg class="form-icon" width="18" height="18">
+                        <!-- <use href='/images/icons/symbolall.svg#icon-phone'></use> -->
+
+                    </svg>
+                </div>
+
+
+                <div class="form-box">
+                    <label class="form-name form-label" for="comment"></label>
+                    <textarea name="comment" id="comment" rows="4" placeholder="Введите комметарий"
+                        class="form-input texterea-text form-no " utocomplete="off"></textarea>
+                </div>
+
+                <div class="form-chek">
+                    <label class="form-name form-label ">
+
+                        <input type="checkbox" class="form-input checkbox" name="chek" value="chek" />
+                        <span class="span-icon"></span>
+                        <span class="span-check-text"></span>
+                        Отправляя форму,я соглашаюсь на оброботку персональних даных в соответствии с<a href="#"
+                            class=" link span-check"> Политикой конфиденциальности</a>
+                    </label>
+
+                    <button class=" btn-secondary btn_modal" type="submit">Отправить</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
