доработка стилей mobile

--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,8 +1,11 @@
 <section class="manufacture">
     <div class="manufacture-container">
-        <p class="manufacture-title">tradition and love</p>
-        <h2 class="manufacture-subtitle">how it’s made?</h2>
-        <div class="cont-box">
+        <div class="manufacture-main-text">
+            <p class="manufacture-title">tradition and love</p>
+            <h2 class="manufacture-subtitle">how it’s made?</h2>
+        </div>
+
+        <div class="mnf-box">
             <div class="manufacture-box">
                 <picture>
                     <source
@@ -16,28 +19,28 @@
                     <img src="./images/how-its-made-cow.png" alt="cow" />
                 </picture>
             </div>
-            <div>
+            <div class="manufacture-bg">
                 <p class="manufacture-text">
                     Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
                     cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
                     justo fringilla.
                 </p>
-                <p class="manufacture-subtext bg">
+
+                <p class="manufacture-subtext">
                     Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
                     Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
                     suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
                     tincidunt.
                 </p>
-                <p class="manufacture-subtext">Aliquam erat volutpat. Aenean accumsan.</p>
-
-                <button class="button-manufacture">
-                    Read more
-                    <svg class="button-arrow" width="10" height="10">
-                        <use href="/images/svg/sprite.svg#icon-button_arrow"></use>
-                    </svg>
-                </button>
+                <p class="manufacture-subtext-second">Aliquam erat volutpat. Aenean accumsan.</p>
             </div>
+
+            <button class="button-manufacture">
+                Read more
+
+            </button>
         </div>
+
 
         <ul class="manufacture-list">
             <li class="manufacture-list-item bucket">
@@ -62,14 +65,12 @@
     </div>
 </section>
 <section class="manufacture-gallery">
-    <div class="manufacture-container">
-        <picture class="gallery-desk">
-            <source srcset="./images/mobile/galary.png 1x ./src/images/mobile/galary@2x.png 2x"
-                media="(max-width:767px)" />
-            <source srcset="./images/tablet/galary.png 1x ./src/images/tablet/galary@2x.png 2x"
-                media="(min-width:768px)" />
-            <source srcset="./images/galary.jpg 1x ./src/images/galary@2x.jpg 2x" media="(min-width:1200px)" />
-            <img src="./images/galary.jpg" alt="cow" />
-        </picture>
-    </div>
+    <!-- <div class="manufacture-container"> -->
+    <picture class="gallery-desk">
+        <source srcset="./images/mobile/galary.png 1x ./src/images/mobile/galary@2x.png 2x" media="(max-width:767px)" />
+        <source srcset="./images/tablet/galary.png 1x ./src/images/tablet/galary@2x.png 2x" media="(min-width:768px)" />
+        <source srcset="./images/galary.jpg 1x ./src/images/galary@2x.jpg 2x" media="(min-width:1200px)" />
+        <img src="./images/galary.jpg" alt="cow" />
+    </picture>
+    <!-- </div> -->
 </section>
