--- a/src/sass/_how-its-made.scss
+++ b/src/sass/_how-its-made.scss
@@ -3,7 +3,7 @@
   width: 100%;
 
   @media screen and (min-width: 320px) {
-    max-width: 100%;
+    max-width: 320px;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -35,7 +35,10 @@
 .manufacture {
   background-color: $footer-bg;
   padding-top: 125px;
-  padding-bottom: 100px;
+  padding-bottom: 97px;
+  @media screen and (max-width: 767px) {
+    letter-spacing: 0;
+  }
 
   @media screen and(min-width:768px) {
     padding-top: 130px;
@@ -46,14 +49,17 @@
     padding-top: 125px;
   }
 }
-
+.manufacture-main-text {
+  margin-right: 41px;
+  margin-left: 39px;
+}
 .manufacture-title {
   padding-bottom: 15px;
   font-family: Titan One;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.16;
+  line-height: 1.145;
   text-align: center;
   text-transform: uppercase;
   color: $advanced-bg;
@@ -73,34 +79,49 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $accent-color;
-  padding-right: 15px;
+  margin-bottom: 26px;
 
   @media screen and(min-width:768px) {
     font-size: 48px;
   }
 }
 
-.cont-box {
+.mnf-box {
   @media screen and(min-width:768px) {
     display: flex;
   }
 }
-
+.mnf-box {
+  margin-bottom: 39px;
+}
 .manufacture-box {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 45px;
+  width: 280px;
+  height: 100%;
+  // padding-left: 15px;
+  // padding-right: 15px;
+  margin-bottom: 46px;
+}
+
+.manufacture-bg {
+  padding-left: 30px;
+  padding-right: 30px;
+  @media screen and(max-width:767px) {
+    background-image: url('/images/mobile/how-its-made-milk.png');
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    background-size: contain;
+  }
 }
 
 .manufacture-text {
   margin-bottom: 45px;
-  padding-left: 50px;
-  padding-right: 50px;
+
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.58;
+  line-height: 1.62;
+  letter-spacing: 0;
 
   color: #000000;
 
@@ -109,10 +130,9 @@
   }
 }
 
-.manufacture-subtext {
-  margin-bottom: 18px;
-  padding-left: 50px;
-  padding-right: 50px;
+.manufacture-subtext,
+.manufacture-subtext-second {
+  margin-bottom: 8px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -125,42 +145,56 @@
   }
 }
 
-.bg {
-  @media screen and(max-width:767px) {
-    background-image: url('/images/mobile/how-its-made-milk.png');
-    background-repeat: no-repeat;
-  }
+.manufacture-subtext-second {
+  margin-bottom: 17px;
 }
 
-.bottom-manufacture {
-  margin-left: 50px;
+.button-manufacture {
+  display: inline-flex;
+  margin-left: 30px;
+  margin-right: 74px;
+
   width: 176px;
+  padding-left: 37px;
+  padding-right: 38px;
   height: 44px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.28;
+  line-height: 1.302;
   align-items: center;
   text-align: center;
   color: #d41443;
 
   background: $main-color;
   border-radius: 22px;
+  border-color: transparent;
 }
 
-.bottom-manufacture:hover {
+.button-manufacture::after {
+  content: '';
+  display: inline-block;
+  margin-left: 14px;
+  margin-right: 0;
+  width: 10px;
+  height: 10px;
+  background-image: url(../images/svg/icon-button_arrow.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.button-manufacture:hover {
   cursor: pointer;
   background: #ecebeb;
 }
 
-.bottom-arrow {
-  margin-left: 14px;
-}
 .manufacture-list-item {
-  margin-top: 40px;
-  margin-left: 20px;
-  margin-right: 70px;
+  margin-right: 50px;
+}
+
+.manufacture-list-item:not(:last-child) {
+  margin-bottom: 38px;
 }
 
 .manufacture-list-item::before {
@@ -186,11 +220,15 @@
 }
 
 .manufacture-item-num {
+  display: inline-block;
+  width: 98px;
+  height: 56px;
+
   font-family: Titan One;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
-  line-height: 1.13;
+  line-height: 1.138;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $accent-color;
@@ -205,6 +243,10 @@
   color: #000000;
 }
 
+.manufacture-gallery {
+  text-align: center;
+  padding-bottom: 80px;
+}
 .gallery-desk {
   display: inline-block;
   width: 364px;
