--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -13,15 +13,20 @@
 
 @mixin for-size($range) {
   $mobile: 480px;
+
   $tablet: 768px;
   $desktop: 1200px;
-
+  $mob-tab: 600px;
   @if $range == mobile-only {
     @media (max-width: #{$tablet - 1}) {
       @content;
     }
   } @else if $range == mobile {
     @media (min-width: $mobile) {
+      @content;
+    }
+  } @else if $range == mob-tab {
+    @media (min-width: $mob-tab) {
       @content;
     }
   } @else if $range == tablet {
