--- a/src/sass/footer/_footer-sotial-list.scss
+++ b/src/sass/footer/_footer-sotial-list.scss
@@ -26,6 +26,7 @@
     width: 32px;
     height: 32px;
     fill: #fea5bb;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:focus,
     &:hover {
       fill: rgba(212, 20, 67, 1);
