Добавляет стили под 480px

--- a/src/partials/cow.html
+++ b/src/partials/cow.html
@@ -20,7 +20,7 @@
                 Aliquam erat volutpat. Aenean accumsan.</p>            
                 <a class="link cow-link" href="">Read more
                     <svg class="cow-link-icon">
-                        <use href="./images/sprite.svg#btn-arrow-icon"></use>
+                        <use href="./images/sprite.svg#icon-cheveron-right"></use>
                     </svg>
                 </a>
             </div>
