--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -3,13 +3,13 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
-  @media screen and (min-width: 320px) {
+  @include for-size('mobile') {
     min-width: 320px;
   }
-  @media screen and (min-width: 768px) {
+  @include for-size('tablet') {
     width: 768px;
   }
-  @media screen and (min-width: 1200px) {
+  @include for-size('desktop') {
     width: 1200px;
   }
 }
